cabal-version:      3.0
name:               reflex-react
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Obsidian Systems LLC
maintainer:         maintainer@obsidian.systems
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable reflex-react
  import:           warnings
  main-is:          Main.hs
  other-modules:
    React
--    Data.JSString.Internal.Type
--    Data.JSString.Text
--    GHCJS.Foreign.Internal
--    GHCJS.Internal.Types
--    GHCJS.Marshal
--    GHCJS.Marshal.Internal
--    GHCJS.Marshal.Pure
--    GHCJS.Prim
--    GHCJS.Prim.Internal
--    GHCJS.Types
--    JavaScript.Array
--    JavaScript.Array.Internal
--    JavaScript.Object.Internal
--    Language.Javascript.JSaddle
--    Language.Javascript.JSaddle.Arguments
--    Language.Javascript.JSaddle.Classes
--    Language.Javascript.JSaddle.Classes.Internal
--    Language.Javascript.JSaddle.Debug
--    Language.Javascript.JSaddle.Evaluate
--    Language.Javascript.JSaddle.Marshal.String
--    Language.Javascript.JSaddle.Monad
--    Language.Javascript.JSaddle.Native
--    Language.Javascript.JSaddle.Native.Internal
--    Language.Javascript.JSaddle.Object
--    Language.Javascript.JSaddle.Properties
--    Language.Javascript.JSaddle.Run
--    Language.Javascript.JSaddle.Run.Files
--    Language.Javascript.JSaddle.String
--    Language.Javascript.JSaddle.Types
--    Language.Javascript.JSaddle.Value
--    Language.Javascript.JSaddle.Warp
--    Language.Javascript.JSaddle.Warp.Debug
--    Language.Javascript.JSaddle.WebSockets
--    Language.Javascript.JSaddle.WebSockets.Compat
  build-depends:    base
--                  , reflex-react --TODO: Split into a library
                  , reflex-dom-core
                  , reflex
                  , jsaddle
                  , jsaddle-dom
                  , ghcjs-dom
                  , text
                  , containers
                  , mtl
                  , deepseq
                  , aeson
                  , scientific
                  , bytestring
                  , stm
                  , ref-tf
                  , transformers
                  , unliftio-core
                  , exceptions
                  , async
                  , primitive
                  , lens
                  , ghc-prim
                  , http-types
                  , entropy
                  , base64-bytestring
                  , witherable
                  , foreign-store
                  , dependent-sum
                  , reflection
  hs-source-dirs:
    src
    src-exe

  if impl(ghcjs)
    build-depends: ghcjs-base == 0.2.*
                  -- This is to allow the hashable patches to work
                  -- the hashable should to be pinned in reflex-platform
                  , hashable == 1.3.5.0
  else
    build-depends: websockets
                  , wai
                  , wai-websockets
                  , warp
                  , jsaddle-warp
--    dep/jsaddle/jsaddle/src
--    dep/jsaddle/jsaddle/src-ghc
--    dep/jsaddle/jsaddle-warp/src
--    dep/jsaddle/jsaddle-dom/src
  default-language: Haskell2010
  ghc-options: -threaded -with-rtsopts=-N10
