cabal-version:      3.0
name:               reflex-react
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Obsidian Systems LLC
maintainer:         maintainer@obsidian.systems
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
synopsis:           Create React components with Reflex
description:
  This library provides bindings to React that allow you to write components
  with Reflex.  Typically, these components will be compiled with GHCJS to
  produce JavaScript for inclusion in a React application.

common warnings
    ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    Reflex.React

  build-depends:    base
                  , react
                  , reflex-dom-core
                  , reflex
                  , jsaddle
                  , jsaddle-dom
                  , ghcjs-dom
                  , text
                  , containers
                  , mtl
                  , deepseq
                  , aeson
                  , scientific
                  , bytestring
                  , stm
                  , ref-tf
                  , transformers
                  , unliftio-core
                  , exceptions
                  , async
                  , primitive
                  , lens
                  , ghc-prim
                  , http-types
                  , entropy
                  , base64-bytestring
                  , witherable
                  , foreign-store
                  , dependent-sum
                  , reflection
  hs-source-dirs:
    src
    src-exe

  if impl(ghcjs)
    build-depends: ghcjs-base == 0.2.*
                  , ghcjs-prim
                  -- This is to allow the hashable patches to work
                  -- the hashable should to be pinned in reflex-platform
                  , hashable == 1.3.5.0
  else
    build-depends: websockets
                  , wai
                  , wai-websockets
                  , warp
                  , jsaddle-warp

  default-language: Haskell2010
